Style:implementing range elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
+    <form action="">
+        <label for="input-range-1">1</label>
+        <input type="range" name="input-range-1" id="input-range-1" min="1" max="100">
+        <label for="input-range-1">100</label>
+        <input type="range" name="input-range-1" id="input-range-1" min="1" max="100">
+    </form>
     <main class="container"></main>
 </body>
 </html>
