--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 </head>
 <body>
     <form action="">
-        <label for="input-range-1">1</label>
-        <input type="range" name="input-range-1" id="input-range-1" min="1" max="100">
-        <label for="input-range-1">100</label>
-        <input type="range" name="input-range-1" id="input-range-1" min="1" max="100">
+        <label for="input-range-1">From</label>
+        <input type="number" name = "from" id = "from">
+        <label for="input-range-1">Between</label>
+        <input type="number" name="Between" id="between">
     </form>
-    <main class="container"></main>
+    <main class="container">
+        <h2>Guess number between <span data-starting>1</span> and  <span data-ending>100</span></h2>
+        <form>
+            <input type="number" name="guessing-num" id="guessing-num">
+            <button class="submit-button">Submit</button>
+        </form>
+        <p>You have <span class="chances"></span> Chances</p>
+    </main>
 </body>
 </html>
