--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         </form>
         <p>You have <span class="chances" data-chances></span> Chances</p>
     </main>
+    <script src="dist/script.js"></script>
 </body>
 </html>
