Fix:fixed the bug in particular defining target number globaly but genereting inside function in order to avoid regenereting everytime program will validate range

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </form>
         <p><span data-high-low></span>You have <span class="chances" data-chances></span> Chances</p>
     </main>
-    <script src="dist/script.js"></script>
-    <script src="dist/dialog.js"></script>
+    <script src="dist/script.js" type="module"></script>
+    <script src="dist/dialog.js" type="module"></script>
 </body>
 
 </html>
