Writing users choosen number inside range number container

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class='submit-button' data-submitRange>Submit</button>
     </dialog>
     <main class="container">
-        <h2>Guess number between <span data-starting>1</span> and <span data-ending>100</span></h2>
+        <h2>Guess number between <span data-starting></span> and <span data-ending></span></h2>
         <form>
             <input type="number" name="guessing-num" id="guessing-num">
             <button class="submit-button" data-submit>Submit</button>
