Implementing system which notifies user using dialog if they guessed or run out from chances

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <dialog data-dialog-game-over>
+        <h2 data-messege></h2>
+        <button class='restart-button' data-restart>Restart</button>
+    </dialog>
     <dialog data-dialog>
         <form action="">
             <label for="starting">From</label>
