Writing between instead of to

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </dialog>
     <dialog data-dialog>
         <form action="">
-            <label for="starting">From</label>
+            <label for="min">From</label>
             <input type="number" name="starting" id="starting">
-            <label for="end">Between</label>
+            <label for="end">To</label>
             <input type="number" name="end" id="end">
         </form>
         <button class='submit-button' data-submitRange>Submit</button>
